[tool.poetry]
name = "spotdl-gui"
version = "0.1.0"
description = ""
authors = ["nozwock <57829219+nozwock@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "spotdl_gui" }]

[tool.poetry.scripts]
spotdl-gui = 'spotdl_gui.app:main'

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
spotdl = "^4.2.0"
platformdirs = "^3.9.1"
pyside6 = "^6.5.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
pyinstaller = "^5.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
