[tool.poetry]
name = "spotdl-gui"
version = "0.5.2"
description = "Simple GUI wrapper over spotDL, a Spotify downloader"
authors = ["nozwock <57829219+nozwock@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "spotdl_gui" }]

[tool.poetry.scripts]
spotdl-gui = 'spotdl_gui.app:main'

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
# spotdl = "^4.2.0"
spotdl = { git = "https://github.com/nozwock/spotify-downloader.git" }
platformdirs = "^3.9.1"
pyside6 = "^6.5.2"
pyqtconfig = "^0.9.2"
pyqtdarktheme = "^2.1.0"
regex = "^2023.6.3"
pyqt6-tools = "^6.4.2.3.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
pyinstaller = "^5.13.0"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
